[package]
name = "ossuary"
version = "0.1.0"
authors = ["Trevor Bentley"]
edition = "2018"

[lib]
crate_type = ["lib", "cdylib", "staticlib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort' #'unwind'
incremental = true
overflow-checks = false

[dependencies]
x25519-dalek = "0.3.0"
ed25519-dalek = "0.8.1"
chacha20-poly1305-aead = "0.1.2"
sha2 = "0.7"
rand = "0.6.1"
