[package]
name = "ossuary"
version = "0.3.0"
authors = ["Trevor Bentley"]
edition = "2018"

[lib]
crate_type = ["lib", "cdylib", "staticlib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort' #'unwind'
incremental = true
overflow-checks = false

[dependencies]
x25519-dalek = "=0.5.2"
ed25519-dalek = "=1.0.0-pre.1"
chacha20-poly1305-aead = "=0.1.2"
rand = "=0.6.5"
