[package]
name = "ossuary"
version = "0.5.0"
authors = ["Trevor Bentley <trevor@trevorbentley.com>"]
description = "Library for establishing secure communication channels between two hosts."
keywords = ["communication", "cryptography", "security", "network"]
categories = ["cryptography","network-programming"]
homepage = "https://github.com/mrmekon/ossuary"
repository = "https://github.com/mrmekon/ossuary"
documentation = "https://mrmekon.github.io/ossuary/ossuary/"
license = "Apache-2.0"
edition = "2018"

[lib]
crate_type = ["lib", "cdylib", "staticlib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort' #'unwind'
incremental = false
overflow-checks = false

[dependencies]
x25519-dalek = "=0.5.2"
ed25519-dalek = "=1.0.0-pre.1"
chacha20-poly1305-aead = { version = "=0.1.2", features= ["simd", "simd_opt"] }
rand = "=0.6.5"
